2003-08-30	Ralf Corsepius <corsepius@faw.uni-ulm.de>

	* started.texi: include common/rtems.texi.
	* Makefile.am: Reflect changes to $(top_srcdir)/project.am.
	* binaries.t: Fix list of supported binary packages.
	Comment out references to cygwin rpms.
	Fix definition of RPM. Add Java to optional langs.
	Use RTEMSPREFIX instead of /opt/rtems.
	* buildc.t: Use RTEMSPREFIX instead of /opt/rtems.
	* buildrt.t: Various minor fixes.
	Use --disable-networking instead of --disable-tcpip.
	Use RTEMSPREFIX instead of /opt/rtems.
	* nextstep.t: Remove some more refs to oarcorp.com.
	Use RTEMSHTTPURL instead of www.rtems.com.
	* started/tversions.texi.in: Use @value{VERSION} instead of
	hard-coded "4.6.0"

2003-08-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* tversions.texi: Remove.
	* tversions.texi.in: New (dynamically created).
	* Makefile.am: Reflect changes above.
	* binaries.t, buildc.t, buildrt.t, intro.t, nextstep.t, nt.t:
	Various changes (actual tool versions, rtems.com, fixes).

2003-08-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* intro.t, nextstep.t: Fix mailing list addresses.

2003-08-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* buildc.t, buildrt.t, started/nt.t, sample.t, tversions.texi:
	Don't use VARIABLEs containing '-' in @set and @value (violates
	texi-syntax).

2003-08-22	Joel Sherrill <joel@OARcorp.com>

	PR 469/doc
	* buildc.t: Clarifying text on patch file to account for various ways
	they could be compressed or not.

2003-08-22	Joel Sherrill <joel@OARcorp.com>

	* tversions.texi: Correcting version information.

2003-04-18	Joel Sherrill <joel@OARcorp.com>

	* tversions.texi: Updated to reflect gcc3.2.2newlib1.11.0-2.

2003-02-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* buildc.t: Add several @ifset BUILDTOOLS-TAR.
	* sample.t: Use @code{make/README} instead of
	@code{@value{RTEMS-UNTAR}/make/README} (Workaround to PR 345).

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* tversions.texi: Updated tool version numbers.
