@@ -1,3 +1,8 @@
+2003-09-26	Joel Sherrill <joel@OARcorp.com>
+
+	* nt.t: Significant update of Windows information. Hopefully this is
+	now more useful.
+
 2003-08-30	Ralf Corsepius <corsepius@faw.uni-ulm.de>
 
 	* started.texi: include common/rtems.texi.
